apps/homelab/forgejo/server/namespace.yaml
# Need help getting this to work?
# https://kubecraft.click/forgejo-k8s

apiVersion: v1
kind: Namespace
metadata:
  name: forgejo

# Need help getting this to work?
# https://kubecraft.click/forgejo-k8s
